--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -11,6 +11,7 @@ services:
     command: >
       sh -c "python manage.py wait_for_db &&
              python manage.py migrate &&
+             python manage.py generate_employees &&
              python manage.py runserver 0.0.0.0:8001"
     environment:
       - DB_HOST=db
